docs: make AGENTS.md canonical; CLAUDE.md points to it
Most coding harnesses read AGENTS.md, so migrate the full project instructions
from CLAUDE.md into AGENTS.md (neutralizing the Claude-specific header to
address any harness). CLAUDE.md is now a 5-line pointer that @-imports AGENTS.md
so Claude Code still auto-loads the canonical content. Repointed the three
"per CLAUDE.md" attributions in the architecture docs to AGENTS.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>